--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "common-frontend"]
-	path = common-frontend
+[submodule "lib"]
+	path = lib
 	url = https://github.com/ctloveu/common-frontend.git
